--- a/style/overall.css
+++ b/style/overall.css
@@ -5,9 +5,47 @@
 }
 
 body {
-  font-family: ;
+  font-family: bio-sans, sans-serif;
+  font-weight: 400;
+  font-style: normal;
   font: 1rem;
-  line-height: 1.5;
+  line-height: 2;
   color: white;
-  background-image: url(img/baggrund-pasta);
+  background-color: rgb(38, 38, 108);
+}
+
+main {
+  max-width: 1500px;
+  margin-inline: auto;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  display: block;
+}
+
+h1 {
+  font-family: monarcha, serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-family: bio-sans, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+}
+
+h3 {
+  font-family: bio-sans, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 1.4rem;
 }
