--- a/style/overall.css
+++ b/style/overall.css
@@ -49,3 +49,37 @@ h3 {
   text-transform: uppercase;
   font-size: 1.4rem;
 }
+
+a {
+  font-family: bio-sans, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  color: white;
+  text-decoration: none;
+  /* text-decoration: underline;
+  text-decoration-color: yellow; */
+}
+
+a:link {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: yellow;
+  text-decoration: underline;
+  text-decoration-color: yellow;
+}
+
+a:active {
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: white;
+}
