--- a/style/contact.css
+++ b/style/contact.css
@@ -1,16 +1,18 @@
 form {
   padding: 2rem;
-  background-color: rgb(86, 86, 181);
+  background-color: rgb(232, 230, 230);
   border-radius: 8px;
+  margin: 20px;
+  width: 420px;
 }
 
 .form-felt label {
   display: block;
-  
 }
 
 .form-felt {
   margin-block: 20px;
+  color: black;
 }
 
 form input {
