--- a/style/products.css
+++ b/style/products.css
@@ -1,58 +1,102 @@
 body {
-  background-color: rgb(219, 216, 216);
+  background-image: url(../img/baggrund-pasta.webp);
+}
+
+h1 {
+  color: #0b2361;
+  text-align: center;
+  font-size: 60px;
+}
+
+h2 {
+  color: #0b2361;
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 50px;
 }
 
 .grid_1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-left: 200px;
+  margin-right: 100px;
 }
 
 .menu_pasta1 {
   background-color: white;
   border: 5px#0b2361 solid;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   color: black;
   width: 480px;
   height: 200px;
   padding-left: 40px;
   padding-top: 30px;
-  margin-left: 50px;
 }
 
 .menu_pasta2 {
   background-color: white;
   border: 5px#0b2361 solid;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   color: black;
   width: 480px;
   height: 280px;
   padding-left: 40px;
-  padding-top: 20px;
+  padding-top: 16px;
 }
 
 .menu_pasta3 {
   background-color: white;
   border: 5px#0b2361 solid;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   color: black;
   width: 480px;
   height: 200px;
   padding-left: 40px;
   padding-top: 30px;
-  margin-left: 50px;
 }
 
 .menu_pasta4 {
   background-color: white;
   border: 5px#0b2361 solid;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   color: black;
   width: 480px;
-  height: 300px;
+  height: 360px;
   padding-left: 40px;
-  padding-top: 20px;
+  padding-top: 30px;
+}
+
+.grid_1-1_pasta1 {
+  width: 480px;
+  height: 200px;
+}
+
+.grid_1-1_order {
+  width: 480px;
+  height: 30px;
+}
+
+.grid_1-1_order_1 {
+  width: 480px;
+  height: 200px;
+}
+
+.grid_1-1_pasta3 {
+  width: 480px;
+  height: 200px;
+}
+
+.tekst_produkt {
+  margin: 50px;
+  color: #0b2361;
+  font-size: 20px;
+  margin-left: 180px;
+  background-color: white;
+  padding: 50px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
