--- a/style/overall.css
+++ b/style/overall.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  max-width: 1500px;
+  /* max-width: 1500px; */
   margin-inline: auto;
 }
 
@@ -97,6 +97,26 @@ a:active {
   height: 100px;
 }
 
+button.button {
+  background-color: #ffff9b;
+  color: #0b2361;
+  font-size: 1rem;
+  border-radius: 20px;
+  padding: 15px;
+  margin-block: 15px;
+  display: inline-block;
+}
+
+button.button a {
+  color: #0b2361;
+  font-size: 1rem;
+}
+
+button.button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
 @media (min-width: 600px) {
   header {
     position: sticky;
@@ -106,7 +126,7 @@ a:active {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    background-color: #58656d;
+    background-color: #0b2361;
   }
 
   header .logo a {
@@ -133,7 +153,7 @@ a:active {
 /*Styling af burger menu*/
 
 .banner {
-  background-color: transparent;
+  /* background-color: transparent; */
   padding: 2rem;
 
   display: flex;
