--- a/style/overall.css
+++ b/style/overall.css
@@ -113,8 +113,7 @@ button.button a {
 }
 
 button.button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 @media (min-width: 600px) {
