--- a/style/products.css
+++ b/style/products.css
@@ -1,11 +1,11 @@
 body {
-  /* The image used */
+  /* Billedet */
   background-image: url(../img/baggrund-pasta.webp);
 
-  /* Full height */
+  /* Fuld højde */
   height: 100%;
 
-  /* Create the parallax scrolling effect */
+  /* Parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,14 +31,17 @@ h2 {
   font-size: 20px;
   font-weight: bold;
   max-width: 1200px;
-  margin-left: 180px;
+  margin-left: 150px;
 }
 .grid_1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  max-width: 1200px;
-  margin-left: 150px;
+  margin: 80px;
+  margin-left: 350px;
+  gap: 20px;
+  max-width: 800px;
 }
+
 .menu_pasta1 {
   background-color: white;
   border: 5px#0b2361 solid;
@@ -47,8 +50,7 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-  width: 480px;
-  height: 200px;
+
   padding-left: 40px;
   padding-top: 30px;
 }
@@ -60,10 +62,12 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-  width: 480px;
-  height: 280px;
+
   padding-left: 40px;
   padding-top: 16px;
+
+  grid-column: 2/2;
+  grid-row: 1/2;
 }
 .menu_pasta3 {
   background-color: white;
@@ -73,8 +77,7 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-  width: 480px;
-  height: 200px;
+
   padding-left: 40px;
   padding-top: 30px;
 }
@@ -86,24 +89,102 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-  width: 480px;
-  height: 360px;
+
   padding-left: 40px;
-  padding-top: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  grid-column: 2/2;
+  grid-row: 1/2;
 }
-.grid_1-1_pasta1 {
-  width: 480px;
-  height: 200px;
+
+button.button {
+  background-color: #ffff9b;
+  color: #0b2361;
+  font-size: 1rem;
+  border-radius: 20px;
+  padding: 15px;
+  margin-left: 650px;
+  margin-bottom: 50px;
+  display: inline-block;
 }
-.grid_1-1_order {
-  width: 480px;
-  height: 30px;
+
+@media (max-width: 1200px) {
+  .grid_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-left: 80px;
+  }
+  .tekst_produkt {
+    margin-left: 20px;
+  }
+
+  button.button {
+    margin-left: 400px;
+  }
 }
-.grid_1-1_order_1 {
-  width: 480px;
-  height: 200px;
+
+@media (max-width: 1000px) {
+  .grid_1-1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-left: 80px;
+  }
+
+  .menu_pasta1 {
+    grid-column: 1/2;
+    grid-row: 1/1;
+  }
+  .grid_1-1_pasta1 {
+    grid-column: 1/2;
+    grid-row: 2/2;
+  }
+  .menu_pasta2 {
+    grid-column: 1/2;
+    grid-row: 1/1;
+  }
+  .grid_1-1_order_1 {
+    grid-column: 1/2;
+    grid-row: 2/2;
+  }
+
+  .menu_pasta3 {
+    grid-column: 1/2;
+    grid-row: 1/1;
+  }
+  .grid_1-1_pasta3 {
+    grid-column: 1/2;
+    grid-row: 2/2;
+  }
+
+  .menu_pasta4 {
+    grid-column: 1/2;
+    grid-row: 1/1;
+  }
+  .grid_1-1_order {
+    grid-column: 1/2;
+    grid-row: 2/2;
+  }
+
+  button.button {
+    margin-left: 200px;
+  }
 }
-.grid_1-1_pasta3 {
-  width: 480px;
-  height: 200px;
+@media (max-width: 650px) {
+  .grid_1-1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin: 40px;
+  }
+
+  .tekst_produkt {
+    margin: 20px;
+  }
+
+  button.button {
+    margin-left: 100px;
+  }
 }
