--- a/style/index.css
+++ b/style/index.css
@@ -78,8 +78,8 @@ button.button {
   background-size: cover;
   display: grid;
   padding-top: 200px;
-  padding-bottom: 50px;
-  border-bottom: 20px solid #0b2361;
+  padding-bottom: 150px;
+  border-bottom: 15px solid #0b2361;
 }
 
 .container > * {
@@ -143,4 +143,76 @@ figure {
   background-color: white;
   border: 20px solid #f09844;
   display: grid;
+}
+
+@media (max-width: 850px) {
+  .grid_1-1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr;
+  }
+  .grid_1-1-1-1 h2 {
+    grid-column: 3 / span 2;
+    padding-top: 50px;
+  }
+
+  .step1 {
+    grid-column: 3;
+    grid-row: 2;
+    text-align: center;
+  }
+
+  .step2 {
+    grid-column: 4;
+    grid-row: 2;
+    text-align: center;
+  }
+
+  .step3 {
+    grid-column: 3;
+    grid-row: 3;
+    text-align: center;
+  }
+
+  .step4 {
+    grid-column: 4;
+    grid-row: 3;
+    text-align: center;
+  }
+}
+
+@media (max-width: 430px) {
+  .grid_1-1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+  }
+
+  .step1 {
+    grid-column: 3 / span 2;
+    grid-row: 2;
+    text-align: center;
+  }
+
+  .step2 {
+    grid-column: 3 / span 2;
+    grid-row: 3;
+    text-align: center;
+  }
+
+  .step3 {
+    grid-column: 3 / span 2;
+    grid-row: 4;
+    text-align: center;
+  }
+
+  .step4 {
+    grid-column: 3 / span 2;
+    grid-row: 5;
+    text-align: center;
+  }
+}
+
+footer p {
+  color: white;
 }
