--- a/style/contact.css
+++ b/style/contact.css
@@ -45,3 +45,13 @@ h1 {
   align-content: center;
   text-align: center;
 }
+
+.grid_1-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+grid_1-1_pasta1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
