--- a/style/overall.css
+++ b/style/overall.css
@@ -345,7 +345,7 @@ footer {
 }
 
 @media (min-width: 500px) and (max-width: 900px) {
-  footer {
+  .footer {
     width: 100%;
     margin-bottom: 250px;
     background-image: url("../img/footer.png");
