--- a/style/index.css
+++ b/style/index.css
@@ -147,7 +147,7 @@ p {
 
 .container {
   width: 100%;
-  background: url(../img/forside_baggrund.png);
+  background: url(../img/forside_baggrund.webp);
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
@@ -211,7 +211,7 @@ p {
 
 .container2 {
   width: 100%;
-  background: url(../img/wave_home.png);
+  background: url(../img/wave_home.webp);
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
