--- a/style/products.css
+++ b/style/products.css
@@ -1,17 +1,14 @@
 body {
   /* Billedet */
   background-image: url(../img/baggrund-pasta.webp);
-
   /* Fuld højde */
   height: 100%;
-
   /* Parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 h1 {
   color: #0b2361;
   text-align: center;
@@ -33,15 +30,18 @@ h2 {
   max-width: 1200px;
   margin-left: 150px;
 }
+
+.facts {
+  font-size: 16px;
+}
 .grid_1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 80px;
-  margin-left: 350px;
+  margin-left: 300px;
   gap: 20px;
-  max-width: 800px;
+  max-width: 900px;
 }
-
 .menu_pasta1 {
   background-color: white;
   border: 5px#0b2361 solid;
@@ -50,10 +50,11 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-
-  padding-left: 40px;
-  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
 }
+
 .menu_pasta2 {
   background-color: white;
   border: 5px#0b2361 solid;
@@ -62,10 +63,9 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-
-  padding-left: 40px;
-  padding-top: 16px;
-
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
   grid-column: 2/2;
   grid-row: 1/2;
 }
@@ -77,9 +77,9 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-
-  padding-left: 40px;
-  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
 }
 .menu_pasta4 {
   background-color: white;
@@ -89,24 +89,22 @@ h2 {
   color: black;
   font-style: italic;
   font-weight: lighter;
-
-  padding-left: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 5px;
-  padding-bottom: 5px;
-
   grid-column: 2/2;
   grid-row: 1/2;
 }
-
-button.button {
+.button {
   background-color: #ffff9b;
   color: #0b2361;
   font-size: 1rem;
   border-radius: 20px;
   padding: 15px;
+  margin-block: 15px;
+  display: inline-block;
   margin-left: 650px;
   margin-bottom: 50px;
-  display: inline-block;
 }
 
 @media (max-width: 1200px) {
@@ -119,20 +117,17 @@ button.button {
   .tekst_produkt {
     margin-left: 20px;
   }
-
-  button.button {
+  .button {
     margin-left: 400px;
   }
 }
-
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
   .grid_1-1 {
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
     margin-left: 80px;
   }
-
   .menu_pasta1 {
     grid-column: 1/2;
     grid-row: 1/1;
@@ -149,7 +144,6 @@ button.button {
     grid-column: 1/2;
     grid-row: 2/2;
   }
-
   .menu_pasta3 {
     grid-column: 1/2;
     grid-row: 1/1;
@@ -158,7 +152,6 @@ button.button {
     grid-column: 1/2;
     grid-row: 2/2;
   }
-
   .menu_pasta4 {
     grid-column: 1/2;
     grid-row: 1/1;
@@ -167,9 +160,8 @@ button.button {
     grid-column: 1/2;
     grid-row: 2/2;
   }
-
-  button.button {
-    margin-left: 200px;
+  .button {
+    margin-left: 320px;
   }
 }
 @media (max-width: 650px) {
@@ -179,12 +171,16 @@ button.button {
     gap: 20px;
     margin: 40px;
   }
-
+  .menu_pasta1,
+  .menu_pasta2,
+  .menu_pasta3,
+  .menu_pasta4 {
+    font-size: 18px;
+  }
   .tekst_produkt {
     margin: 20px;
   }
-
-  button.button {
+  .button {
     margin-left: 100px;
   }
 }
