--- a/style/about.css
+++ b/style/about.css
@@ -1,42 +1,155 @@
-.grid_1-1_2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-}
-.story {
-  align-content: center;
-  padding-right: 8%;
-
-  border: 2px;
-  padding: 10px;
-  color: white;
-  background-color: #0b2361;
-  margin-right: 8%;
-}
-
-h2 {
-  text-align: center;
-  padding-top: 8%;
-  margin-bottom: 2%;
-}
-.about_us {
-  align-content: center;
-  padding-left: 2%;
-  padding-right: 2%;
-  color: white;
-  background-color: #0b2361;
-  margin-left: 8%;
-}
-h1 {
-  margin-bottom: 5%;
-  align-content: center;
-  text-align: center;
-  padding-top: 8%;
-  color: #0b2361;
-}
-.billede_shop {
-  padding-left: 8%;
-}
 body {
+  /* Billedet */
   background-image: url(../img/baggrund-pasta.webp);
+  /* Fuld højde */
+  height: 100%;
+  /* Parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (min-width: 500px) {
+  .grid_1-1_2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
+  .grid_1-1_2 {
+    background-color: white;
+    padding-block: 30px;
+  }
+
+  .about_us {
+    align-content: center;
+    padding-left: 2%;
+    padding-right: 2%;
+    color: white;
+    background-color: #0b2361;
+    margin-left: 8%;
+    padding-inline: 20px;
+    padding-bottom: 30px;
+
+    display: grid;
+  }
+
+  .about_us > * {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .about_us-style {
+    place-self: center;
+  }
+
+  .story {
+    align-content: center;
+    padding-right: 8%;
+    color: white;
+    background-color: #0b2361;
+    margin-right: 8%;
+    padding-inline: 20px;
+
+    display: grid;
+  }
+
+  .story > * {
+    grid-column: 1;
+  }
+
+  .story-style {
+    place-self: center;
+  }
+
+  h2 {
+    text-align: center;
+    padding-top: 6%;
+    margin-bottom: 2%;
+  }
+
+  .h2-style {
+    border-bottom: 2px solid whitesmoke;
+    margin-inline: 150px;
+    margin-bottom: 30px;
+  }
+
+  h1 {
+    margin-bottom: 5%;
+    align-content: center;
+    text-align: center;
+    padding-top: 8%;
+    color: #0b2361;
+  }
+  .billede_shop {
+    padding-left: 8%;
+  }
+}
+
+@media (max-width: 500px) {
+  .grid_1-1_2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .about_us {
+    align-content: center;
+    color: white;
+    background-color: #0b2361;
+    border-radius: 5px;
+    margin-left: 8%;
+    padding-inline: 20px;
+    padding-bottom: 30px;
+
+    display: grid;
+
+    margin-inline: 10px;
+  }
+
+  .about_us > * {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .about_us-style {
+    place-self: center;
+  }
+
+  .story {
+    align-content: center;
+    color: white;
+    background-color: #0b2361;
+    padding-inline: 20px;
+    padding-bottom: 20px;
+
+    display: grid;
+
+    margin-inline: 10px;
+  }
+
+  .story > * {
+    grid-column: 1;
+  }
+
+  .story-style {
+    place-self: center;
+  }
+
+  h2 {
+    text-align: center;
+    padding-top: 6%;
+    margin-bottom: 2%;
+  }
+
+  .h2-style {
+    border-bottom: 2px solid whitesmoke;
+    margin-inline: 30px;
+    margin-bottom: 30px;
+  }
+
+  .billede_shop {
+    margin-inline: 10px;
+  }
 }
