--- a/style/about.css
+++ b/style/about.css
@@ -10,6 +10,15 @@ body {
   background-size: cover;
 }
 
+.video_interview {
+  margin-right: 60px;
+}
+
+.video_interview > video {
+  width: 100%;
+  height: auto;
+}
+
 @media (min-width: 500px) {
   h1 {
     font-size: 3rem;
