rettet header på alle

--- a/style/about.css
+++ b/style/about.css
@@ -9,7 +9,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+h1 {
+  align-content: center;
+  text-align: center;
+  color: #0b2361;
+  font-size: 3rem;
+  margin-top: 100px;
+}
 .video_interview {
   margin-right: 60px;
 }
@@ -19,18 +25,13 @@ body {
   height: auto;
 }
 
-@media (min-width: 500px) {
-  h1 {
-    font-size: 3rem;
-    margin-top: 100px;
-  }
-  .overskrift {
-    width: 100%;
-    background-image: url(../img/pasta2_header.webp);
-    background-size: cover;
-    padding-block: 270px;
-  }
+.overskrift {
+  width: 100%;
+  background-color: var(--header-color);
+  padding-block: 20px;
+}
 
+@media (min-width: 500px) {
   .top-wave {
     width: 100%;
     background-image: url(../img/white-wave-top.webp);
@@ -109,13 +110,6 @@ body {
     margin-bottom: 30px;
   }
 
-  h1 {
-    margin-bottom: 5%;
-    align-content: center;
-    text-align: center;
-    padding-top: 8%;
-    color: #0b2361;
-  }
   .billede_shop {
     padding-left: 8%;
   }
@@ -185,5 +179,18 @@ body {
 
   .billede_shop {
     margin-inline: 10px;
+  }
+
+  header {
+    width: 100%;
+    background-color: var(--header-color);
+  }
+
+  .overskrift {
+    margin-bottom: 40px;
+  }
+
+  .video_interview {
+    margin: 20px;
   }
 }
