--- a/style/contact.css
+++ b/style/contact.css
@@ -50,7 +50,7 @@ h3 {
   }
 
   .overskrift > h1 {
-    padding-top: 80px;
+    padding-top: 100px;
     color: #0b2361;
   }
 
@@ -119,25 +119,25 @@ h3 {
     grid-row: 1fr 1fr;
   }
 
-  a {
+  /* a {
     font-family: bio-sans, sans-serif;
     font-weight: 600;
     font-style: normal;
     text-transform: uppercase;
     font-size: 1rem;
-    color: #0b2361;
+    color: white;
     text-decoration: none;
   }
 
   a:link {
-    color: #0b2361;
+    color: white;
     text-decoration: none;
   }
 
   a:visited {
     color: #0b2361;
     text-decoration: none;
-  }
+  } */
 
   form {
     margin-inline: 10px;
